Fix alignment for larger devices

--- a/task_04/sass/components/_cards.scss
+++ b/task_04/sass/components/_cards.scss
@@ -6,6 +6,7 @@
 	width: 60%;
 	margin: auto;
 	min-height: 30rem;
+	max-width: 90rem;
 
 	&::before,
 	&::after {
