--- a/task_04/sass/layout/_services.scss
+++ b/task_04/sass/layout/_services.scss
@@ -1,7 +1,11 @@
 .services {
 	background: url("../assets/images/services-image.png") center;
 	background-size: cover;
-	padding: 5rem;
+	padding: 5rem 0;
+
+	@media screen and (max-width: 768px) {
+		padding: 5rem;
+	}
 
 	@media screen and (max-width: 576px) {
 		padding: 2.5rem;
